[BACKPORT] [ozone/wayland] Fix software rendering.

This patch fixes software rendering path by adding mojo APIs
to call newly created WaylandShmBufferManager, which
uses Wayland APIs to create shm buffer and commit it.

Also, some code is rearrenged and moved to WaylandShmBufferManager
instead. WaylandSurfaceCanvas is also moved to a separate file.

gn args:
use_ozone=true
ozone_platform_wayland=true
use_xkbcommon=true

./chrome --ozone-platform=wayland --use-gl=swiftshader --in-process-gpu

Test: ./chrome --ozone-platform=wayland --use-gl=swiftshader
Bug: 910998
Change-Id: Id52fc41e165232cd08eeb471542eab11d6e1cae4
Reviewed-on: https://chromium-review.googlesource.com/c/1454623
Commit-Queue: Maksim Sisov <msisov@igalia.com>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Michael Spang <spang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#635428}